--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,26 @@
   --z-fixed: 100;
 }
 
+/*========== Responsive typography ==========*/
+@media (width > 1150px) {
+  :root {
+    --biggest-font-size: 4.5rem;
+    --h1-font-size: 3rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.25rem;
+    --normal-font-size: 1rem;
+    --small-font-size: .875rem;
+    --smaller-font-size: .813rem;
+  }
+}
+
+/*========== Responsive typography ==========*/
+@media (width > 768px) {
+  .studies__container{
+    grid-template-columns: repeat(2, 250px) 
+  }
+}
+
 /*=============== BASE ===============*/
 * {
   box-sizing: border-box;
@@ -155,6 +175,21 @@ body.dark-theme{
 .main {
   overflow: hidden; /* For animation ScrollReveal */
 }
+
+  /* Navigation for mobile devices */
+  @media (width <= 1060px){
+    .nav__menu{
+      position: fixed;
+      top: -100%;
+      left: 0;
+      background-color: hsla(0, 0%, 0%, .75);
+      width: 100%;
+      padding-block: 1.8rem 5rem ;
+      text-align: center;
+      backdrop-filter: blur(8px);
+      transition: top -4s;
+    }  
+  }
 
 
 /*=============== HEADER & NAV ===============*/
@@ -355,7 +390,7 @@ body.dark-theme{
         margin-bottom: 1.5rem;
         padding-right: 10px;
       }
-
+      
       .home__scroll{
         display: block;
         width: max-content;
@@ -438,8 +473,8 @@ body.dark-theme{
           position: relative;
           border: 4px solid var(--white-color);
           z-index: 1;
-          width: 100%;
-          height: 100%;
+          width: 50px;
+          height: 50px;
         }
 
         .about__shadow,
@@ -457,11 +492,6 @@ body.dark-theme{
           border-bottom: 4px solid var(--first-color);
         }
 
-        .geometric-box{
-          top: 3rem;
-          right: -1.28rem;
-          z-index: 2;
-        }
         .about__line{
           filter: invert(1);
           right: -1.3rem;
@@ -471,6 +501,7 @@ body.dark-theme{
       }
     }
 
+    
     .about__info{
       padding: 0.7rem;
       
@@ -489,17 +520,24 @@ body.dark-theme{
         left: -1.75rem;
         top: 0.7rem;        
       }
+
       .about__description-2{
-        position: relative;
-        color: var(--title-color);
-        margin-bottom: 1.5rem;
         text-align: justify;
-      }
+       }
+
+      .about__details{
+        margin-bottom: 2em;
+        .about__description-2{
+          position: relative;
+          color: var(--title-color);
+          margin-bottom: 1.5rem;
+          text-align: justify;
+        }
+      }     
 
       .about__list{
         list-style: square;
         column-rule-color: black;
-        margin-bottom: 3rem;
 
         .about__item{
           text-align: justify;
@@ -510,6 +548,7 @@ body.dark-theme{
         justify-content: center;
         align-items: center;
         column-gap: 1rem;
+        margin-top: 2em;
         
         .button,
         button_ghost{
@@ -648,7 +687,7 @@ body.dark-theme{
     .projects__card{ 
       min-height: 200px;
       min-width: 700;
-      max-width: 450px;  
+      max-width: 400px;  
       display: flex;
       flex-direction: column;
       flex: 1 0 300px;
@@ -868,20 +907,7 @@ body.dark-theme{
     
   } 
 
-  /* Navigation for mobile devices */
-@media (width <= 1060px){
-  .nav__menu{
-    position: fixed;
-    top: -100%;
-    left: 0;
-    background-color: hsla(0, 0%, 0%, .75);
-    width: 100%;
-    padding-block: 1.8rem 5rem ;
-    text-align: center;
-    backdrop-filter: blur(8px);
-    transition: top -4s;
-  }  
-}
+
 
 /****WINDOWS TABLET ****/
 @media (width >= 641px)and (width <= 1060px){
@@ -894,14 +920,16 @@ body.dark-theme{
 
   .home__container{
     display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    max-width: 641px;
-    margin: 0 auto;
-    flex-direction: row;
-    gap: 1em;  
     justify-content: center;    
     align-items: center;
+    padding: 2em;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 750px;
+    margin: auto;
+    flex-direction: row;
+    gap: 1em;  
+
     
   }
   
@@ -971,16 +999,36 @@ body.dark-theme{
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 800px;
+    max-width: 820px;
     font-size: 1.3em;
   }  
 
   .about__main{      
     width: 100%;
-    max-width: 800px;
+    /* max-width: 800px; */
     display: flex;
     justify-content: center;
-    gap: 0 5em;
+    gap: 0 2em;
+   }
+
+   .about__image{
+    display: flex;
+    flex-direction: column;
+   }
+
+   .about__img{
+    border: 8px solid var(--white-color);
+    height: 100%;    
+   }
+
+   .about__shadow{
+    width: 300px;
+    right: -5.5rem;
+    border-bottom: 6px solid var(--first-color);      
+   }  
+
+   .about__description-2{
+    text-align: justify;
    }
 
 }
