--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,34 +97,6 @@ img {
 }
 
 
-/*============================= DARK MODE ========================*/
-
-/*====== Variables Dark theme =======*/
-body.dark-theme{
-  --first-color: hsl(14, 98%, 50%);
-  --black-color: hsl(0, 0%, 0%);
-  --black-color-light: hsl(0, 0%, 40%);
-  --title-color: hsl(0, 0%, 0%);
-  --text-color: hsl(0, 0%, 35%);
-  --body-color: hsl(0, 0%, 8%);
-  --container-color: hsl(0, 0%, 12%);
-}
-
-
-.nav__buttons{
-  display: flex;
-  align-items: center;
-  column-gap: 1rem;
-}
-
-.change-theme{
-  font-size: 1.25rem;
-  color: var(--title-color);
-  cursor: pointer;
-  transition: color .3s;
-}
-
-
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 90%;
@@ -182,13 +154,23 @@ body.dark-theme{
       position: fixed;
       top: -100%;
       left: 0;
-      background-color: hsla(0, 0%, 0%, .75);
       width: 100%;
+      background-color: hsla(0, 0%, 0%, .75);
       padding-block: 1.8rem 5rem ;
       text-align: center;
       backdrop-filter: blur(8px);
       transition: top -4s;
     }  
+    
+     /*DARK MODE */
+     .toogle__moon.active .ri-moon-line{
+      left: 1em;
+    }
+
+    body.active{
+      background-color: black;
+    }
+
   }
 
 
@@ -445,11 +427,9 @@ body.dark-theme{
 
 /*=============== ABOUT ===============*/
 .about__section{
-  background-color: var(--body-color);
   transition: background-color .4s;
   
   .about__container{
-    background-color:  var(--body-color);
     transition: background-color .4s;
     padding: 2rem;
     margin: 0 auto;
@@ -667,7 +647,7 @@ body.dark-theme{
 
 /*=============== PROJECTS ===============*/
 .projects__section{
-  background-color: var(--body-color);
+  /* background-color: var(--body-color); */
   transition: background-color .4s;
   padding-top: 3rem;
 
@@ -731,7 +711,6 @@ body.dark-theme{
 
 /*=============== CONTACT ===============*/
 .contact__section{
-  background-color: var(--body-color);
   transition: background-color .4s;
   padding-bottom: 0;
   .contact__container{
@@ -1121,10 +1100,20 @@ body.dark-theme{
         display:grid;
         position: relative;
         top: 4px;
-        right:35rem;
-        .ri-moon-line{
-          color: bisque;
-        }
+        right:35rem;        
+      }
+
+      .ri-moon-line{
+        color: bisque;
+      }
+
+      /*DARK MODE */
+      .toogle__moon.active .ri-moon-line{
+        left: 1em;
+      }
+
+      body.active{
+        background-color: black;
       }
 
       .nav__link-button{
