--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,19 +38,6 @@
   --z-tooltip: 10;
   --z-fixed: 100;
 
- 
-  /*========== Dark mode colors ==========*/
-  --first-color: hsl(14, 80%, 50%)
-  --black-color: hsl(0, 0%, 18%)	
-
-  --black-color-light: hsl(0, 0%, 30%)
-  --title-color: hsl(0, 0%, 95%)	
-
-  --text-color: hsl(0, 0%, 70%)	
-  --body-color: hsl(0, 0%, 8%)
-
-  --container-color: hsl(0,0%, 89%) 
-
 }
 
 /*========== Responsive typography ==========*/
@@ -145,10 +132,11 @@ img {
   content: "";
   width: 40px;
   height: 28px;
-  background-color: hsla(14, 98%, 50%, .2);
+  background-color: var(--first-color);
   position: absolute;
   top: -4px;
   right: -8px;
+  z-index: -1;
 }
 
 .section__title-2::after {
@@ -189,6 +177,12 @@ img {
 
     body.dark{
       background-color: #1A1B1E;
+     
+      .home__description{
+        color: var(--container-color);
+      }
+
+
     }
 
   }
@@ -203,7 +197,7 @@ img {
   background-color: var(--body-color);
   z-index: var(--z-fixed);
   transition: box-shadow .4s; 
-  
+ 
 
   .nav{
     position: relative;
@@ -515,7 +509,6 @@ img {
         content: '';
         width: 20px;
         height: 1px;
-        background-color: black;
         position: absolute;
         left: -1.75rem;
         top: 0.7rem;        
@@ -525,24 +518,17 @@ img {
         text-align: justify;
        }
 
-      .about__details{
-        margin-bottom: 2em;
         .about__description-2{
           position: relative;
-          color: var(--title-color);
+          color: black;
           margin-bottom: 1.5rem;
           text-align: justify;
-        }
-      }     
-
-      .about__list{
-        list-style: square;
-        column-rule-color: black;
+        }  
 
         .about__item{
           text-align: justify;
         }
-      }
+    
       .about__buttons{
         display: flex;
         justify-content: center;
@@ -695,7 +681,7 @@ img {
 
       padding: 1rem 1rem 2rem;
       transition: background-color .4s;
-      background-color: var(--white-color);
+      /* background-color: var(--white-color); */
 
       .projects__content{
 
@@ -744,8 +730,7 @@ img {
       position: relative;
       width: 100%;
       height: max-content;
-      /* max-height: max-content; */
-      background-color: var(--body-color);
+      /* background-color: var(--body-color); */
       margin-left: auto;
       border-bottom: 4px solid var(--first-color);
       z-index: 3;
@@ -763,13 +748,13 @@ img {
         flex-direction: column;
         max-width: max-content;
         .contact__description-1{
-          color: var(--title-color);
+          /* color: var(--title-color); */
           font-weight: var(--font-medium);
           margin-bottom: 2rem;
   
         }
         .contact__description-2{
-          color: var(--small-font-size);
+          /* color: var(--small-font-size); */
         }
       }
   
@@ -827,13 +812,15 @@ img {
           border-radius: 4px;
           border: 1.2px solid var(--body-color);
           margin-top: 5px;
-          background-color: var(--container-color);
+          /* background-color: var(--container-color); */
         }
   
         .contact__input:focus{
           outline: none;
           border-color: var(--first-color);
         }
+
+
       }
   
   
@@ -847,14 +834,14 @@ img {
         padding: 0rem 1rem 0 1rem;
   
   
-        .contact__input{
+        .contact__input-area{
           width: 100%;
           font-weight: 400;
           padding: 1rem;
           border-radius: 4px;
           border: 1.2px solid var(--body-color);
           margin-top: 4px;
-          background-color: var(--container-color);
+          /* background-color: var(--container-color); */
         }
         .contact__label{
           font-size: 10px;
@@ -943,7 +930,7 @@ img {
   .home__img{
     max-width: 90%;
     position: relative;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: rgb(38, 57, 77) 0px 3px 40px 0px, rgb(38, 57, 77) 0px 2px 60px 0px;
     z-index: 2;
   }
 
@@ -1223,8 +1210,10 @@ img {
       .home__img{
         max-width: 90%;
         position: relative;
-        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+        box-shadow: rgb(38, 57, 77) 0px 20px 40px -10px, rgb(38, 57, 77) 0px 20px 60px -10px;
         z-index: 2;
+        /* box-shadow: rgb(216, 71, 4) 0px 3px 40px 0px, rgb(216, 71, 4) 0px 2px 60px 0px;
+        border-radius: 25em; */
       }
 
   
@@ -1281,7 +1270,7 @@ img {
       color: var(--black-color);
     }
 
-    /*---------SECTION STUDIES------------------**/
+    /*---------SECTION STUDIES--------------**/
     .studies__section{
       margin: 0 auto;
       justify-content: center;
@@ -1299,7 +1288,7 @@ img {
         background-color: var(--first-color);
       }
 
-      /*---------PROJECTS STUDIES------------------**/
+      /*---------CONTACT STUDIES-------------**/
       .contact__container{
         max-height: max-content;
         padding-bottom: 10em;
@@ -1312,13 +1301,62 @@ img {
         max-width: 1060px;
       }
 
-      /*---------SECTON CONTACT------------------**/
+      .projects__card{
+        background-color: var(--white-color);
+      }
+
+      /*---------SECTON CONTACT--------------**/
       .contact__data{
         width: 100%;
         max-width: 660px;
         margin: auto;
         font-size: 1.1em;
         height: 100%;
+        background-color: var(--body-color);
+      }
+      .contact__input{
+        background-color: var(--container-color);
+      }
+
+      .contact__input-area{
+        background-color: var(--container-color);
+      }
+
+      
+      /*---------SECTON DARK MODE--------------**/
+      body.dark{
+        background-color: #1A1B1E;
+          
+        .home__description,
+        .about__item,
+        .studies__title,
+        .projects__title,
+        .projects__type,
+        .contact__description-1,
+        .contact__description-2{
+          color: var(--container-color);
+        }
+
+        .home__img{
+          box-shadow: rgb(216, 71, 4) 0px 3px 40px 0px, rgb(216, 71, 4) 0px 2px 60px 0px;
+        }  
+
+        .studies__content, 
+        .about__info,
+        .studies__box,
+        .projects__card,
+        .contact__data,
+        .contact__input,
+        .contact__input-area{
+          background-color: #242527;
+        }
+
+        .about__description-1,
+        .about__description-2,
+        .projects__description{
+          font-weight: 520;
+        }
+          
       }
          
   }
