--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,11 +75,11 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
-  color: var(--text-color);
+  /* color: var(--text-color); */
 }
 
 h1, h2, h3, h4 {
-  color: var(--title-color);
+  /* color: var(--title-color); */
   font-weight: var(--font-bold);
 }
 
@@ -164,6 +164,10 @@ img {
       transition: top -4s;
     }  
 
+    .projects__card{
+      background-color: var(--white-color);
+    }
+
     .ri-layout-4-line{
       background-color: var(--first-color);
     }
@@ -178,12 +182,14 @@ img {
             .projects__title,
             .projects__type,
             .contact__description-1,
-            .contact__description-2{
+            .contact__description-2,
+            .about__description-1,
+            .about__description-2{
               color: var(--container-color);
             }
     
             .home__img{
-              /* box-shadow: rgb(216, 71, 4) 0px 19px 38px, rgb(216, 71, 4) 0px 15px 12px; */
+              /* box-shadow: rgb(216, 71, 4) 0px 3px 40px 0px, rgb(216, 71, 4) 0px 2px 60px 0px; */
               box-shadow: rgb(216, 71, 4) 0px 5px 15px;
             }  
     
@@ -196,15 +202,37 @@ img {
             .contact__input-area{
               background-color: #242527;
             }
+            
     
             .about__description-1,
             .about__description-2,
+            .projects__description,
+            .about__item{
+              font-weight: 400;
+            }
+    
+    
+            .section__title-1,
+            .section__title-2,
+            .contact__input, 
+            .contact__input-area{
+              color: aliceblue;
+            }
+    
+            .studies__description,
             .projects__description{
-              font-weight: 520;
+              color: #96979e;
+            }
+    
+            .studies__description{
+              text-align: justify;
+            }
+    
+            .projects__card{
+              border: 4px solid var(--black-color);
             }
               
           }
-
   }
 
 
@@ -521,7 +549,7 @@ img {
       
       .about__description-1{
         position: relative;
-        color: var(--title-color);
+        /* color: var(--title-color); */
         margin-bottom: 1.5rem;
         text-align: justify;
       }
@@ -540,7 +568,7 @@ img {
 
         .about__description-2{
           position: relative;
-          color: black;
+          /* color: black; */
           margin-bottom: 1.5rem;
           text-align: justify;
         }  
@@ -698,10 +726,9 @@ img {
       flex-direction: column;
       flex: 1 0 300px;
       margin: auto;
-
       padding: 1rem 1rem 2rem;
       transition: background-color .4s;
-      /* background-color: var(--white-color); */
+
 
       .projects__content{
 
@@ -1289,6 +1316,7 @@ img {
      .about__description-2{
       font-size: var(--h2-font-size);
       margin-bottom: 2rem;
+      color: var(--black-color);
     }
     .about__list{
       color: var(--black-color);
@@ -1338,10 +1366,7 @@ img {
         height: 100%;
         background-color: var(--body-color);
       }
-      .contact__input{
-        background-color: var(--container-color);
-      }
-
+      .contact__input,
       .contact__input-area{
         background-color: var(--container-color);
       }
@@ -1357,12 +1382,15 @@ img {
         .projects__title,
         .projects__type,
         .contact__description-1,
-        .contact__description-2{
+        .contact__description-2,
+        .about__description-1,
+        .about__description-2{
           color: var(--container-color);
         }
 
         .home__img{
-          box-shadow: rgb(216, 71, 4) 0px 3px 40px 0px, rgb(216, 71, 4) 0px 2px 60px 0px;
+          /* box-shadow: rgb(216, 71, 4) 0px 3px 40px 0px, rgb(216, 71, 4) 0px 2px 60px 0px; */
+          box-shadow: rgb(216, 71, 4) 0px 5px 15px;
         }  
 
         .studies__content, 
@@ -1374,11 +1402,34 @@ img {
         .contact__input-area{
           background-color: #242527;
         }
+        
 
         .about__description-1,
         .about__description-2,
+        .projects__description,
+        .about__item{
+          font-weight: 400;
+        }
+
+
+        .section__title-1,
+        .section__title-2,
+        .contact__input, 
+        .contact__input-area{
+          color: aliceblue;
+        }
+
+        .studies__description,
         .projects__description{
-          font-weight: 520;
+          color: #96979e;
+        }
+
+        .studies__description{
+          text-align: justify;
+        }
+
+        .projects__card{
+          border: 4px solid var(--black-color);
         }
           
       }
