--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1164,13 +1164,14 @@ img {
       top: -1.5em;
       display: flex;
       margin: 0 auto;
+      gap: 1.2em;
       flex-wrap: wrap;
       }
 
       .nav-item{
         position: relative;
         top: -12px;
-        right: -220px;
+        right: -120px;
       }
 
       .nav__link{
@@ -1436,6 +1437,12 @@ img {
           background-color: aliceblue;
         }
 
+        
+        /*---------ACTIVE MENU--------------**/
+        .nav__link.active{
+          border-bottom: 3px solid var(--first-color);
+        }
+
       
       /*---------SECTON DARK MODE--------------**/
       body.dark{
@@ -1515,7 +1522,8 @@ img {
         .swal2-icon.custom-icon{
           background-color: #242527;
         }
-          
+        
+
       }
          
   }
