--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,16 @@ img {
   height: auto;
 }
 
+/*============ STYLES SCROLL=============*/
+::-webkit-scrollbar{
+  width: 10PX;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: var(--first-color);
+  border-radius: 2.5px;
+}
+
 /*============ STYLES SWEEFT ALERT=============*/
   .swal2-container.custom-container .swal2-popup {
     background-color: aliceblue;
